--- a/Calculator/app/Resources/views/calculator/index.html.twig
+++ b/Calculator/app/Resources/views/calculator/index.html.twig
@@ -19,6 +19,8 @@
                                 <option value="-" {{ calculator is defined and calculator.operator == '-' ? 'selected' : '' }}>-</option>
                                 <option value="*" {{ calculator is defined and calculator.operator == '*' ? 'selected' : '' }}>*</option>
                                 <option value="/" {{ calculator is defined and calculator.operator == '/' ? 'selected' : '' }}>/</option>
+                                <option value="%" {{ calculator is defined and calculator.operator == '%' ? 'selected' : '' }}>%</option>
+                                <option value="^" {{ calculator is defined and calculator.operator == '^' ? 'selected' : '' }}>^</option>
                             </select>
                         </div>
                     </div>
