--- a/Blog - Using JS/SoftUniBlogSkeleton/SoftUniBlog/views/article/delete.hbs
+++ b/Blog - Using JS/SoftUniBlogSkeleton/SoftUniBlog/views/article/delete.hbs
@@ -5,7 +5,7 @@
                 <legend>Delete Article</legend>
 
                 <div class="form-group">
-                    <label class="col-sm-4 control-label" for="articleTitle">Article Title</label>
+                    <label class="col-sm-4 control-label" for="articleTitle">{{this.title}}</label>
                     <div class="col-sm-4 ">
                         <input type="text" class="form-control" id="articleTitle" placeholder="Article Title" disabled name="title" value="{{title}}">
                     </div>
@@ -13,7 +13,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label" for="articleContent">Content</label>
                     <div class="col-sm-6">
-                        <textarea class="form-control" id="articleContent" rows="5" name="content" disabled>{{content}}</textarea>
+                        <textarea class="form-control" id="articleContent" rows="5" name="content" disabled>{{this.content}}</textarea>
                     </div>
                 </div>
 
