--- a/Java Blog System/blog/src/main/resources/templates/fragments/header.html
+++ b/Java Blog System/blog/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,5 @@
-<header  th:fragment="header">
+<header th:fragment="header" xmlns:th="http://www.springframework.org/schema/security"
+        xmlns:sec="http://www.w3.org/1999/xhtml">
     <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
