--- a/Java Blog System/blog/src/main/resources/templates/fragments/header.html
+++ b/Java Blog System/blog/src/main/resources/templates/fragments/header.html
@@ -14,6 +14,11 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li sec:authorize="isAuthenticated()">
+                        <a th:href="@{/article/create}">
+                            Create New Article
+                        </a>
+                    </li>
+                    <li sec:authorize="isAuthenticated()">
                         <a th:href="@{/profile}">
                             My Profile
                         </a>
