--- a/Java Blog System/blog/src/main/resources/templates/article/edit.html
+++ b/Java Blog System/blog/src/main/resources/templates/article/edit.html
@@ -1,29 +1,28 @@
 <main xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" th:action="@{/article/eidt/{id}}" method="POST">
+            <form class="form-horizontal" th:action="@{/article/edit/{id}(id=${article.id})}" method="POST">
                 <fieldset>
-                    <legend>New Post</legend>
+                    <legend>Edit Post</legend>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="article_title">Article Title</label>
+                        <label class="col-sm-4 control-label" for="article_title">Post Title</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="article_title" placeholder="Article Title"
-                                   name="title" required="required"/>
+                            <input type="text" class="form-control" id="article_title" placeholder="Post Title" name="title" th:value="${article.title}"/>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="article_content">Content</label>
                         <div class="col-sm-6">
-                            <textarea class="form-control" rows="6" id="article_content" name="content" required="required"></textarea>
+                            <textarea class="form-control" rows="6" id="article_content" name="content" th:field="${article.content}"></textarea>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-default" th:href="@{/}">Cancel</a>
-                            <input type="submit" class="btn btn-primary" value="Edit"/>
+                            <a class="btn btn-default" th:href="@{/article/{id}(id = ${article.id})}">Cancel</a>
+                            <input type="submit" class="btn btn-success" value="Edit"/>
                         </div>
                     </div>
                 </fieldset>
