Implemented Comment model

--- a/Java Blog System/blog/src/main/resources/templates/home/index.html
+++ b/Java Blog System/blog/src/main/resources/templates/home/index.html
@@ -11,7 +11,7 @@
                         <p th:text="${article.summary}"></p>
 
                         <small class="author" th:text="${article.author.fullName}"></small>
-
+                        <!-- <samll class="comments" th:text="${}}" -->
                         <footer>
                             <div class="pull-right">
                                 <a class="btn btn-default btn-xs"
