Simple jQuery script, that removes element from the DOM by clicking on it.

--- a/MVC Movie Tutorial/MVCMovie/MVCMovie/Views/Books/Index.cshtml
+++ b/MVC Movie Tutorial/MVCMovie/MVCMovie/Views/Books/Index.cshtml
@@ -49,7 +49,7 @@
         <td>
             
             @Html.ActionLink("Details", "Details", new { id=item.ID }) 
-            @if (Request.IsAuthenticated) {
+            @if (User.IsInRole("User")) {
                 Html.ActionLink("Edit", "Edit", new { id = item.ID });
                 Html.ActionLink("Delete", "Delete", new { id = item.ID });
             }
